fixing code block alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -210,3 +210,8 @@ i {
     -moz-border-radius: 0 4px 4px 0;
     border-radius: 0 4px 4px 0;
 }
+
+pre {
+    margin-top: -8px;
+    margin-bottom: 16px;
+}
